added README for the css selectors tutorial/quiz

--- a/css/selectors/styles.css
+++ b/css/selectors/styles.css
@@ -6,6 +6,18 @@
 	color: navy;
 }
 
+div:hover {
+	color: white;
+}
+
+div :hover {
+	color: black;
+}
+
+div .class:hover {
+	color: white;
+}
+
 div {
 	color: blue;
 }
